feat: user role assignment apis implemented with tests
